--- a/src/app/components/main.module.css
+++ b/src/app/components/main.module.css
@@ -1,92 +1,121 @@
-/* Main.module.css */
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    font-family: Arial, sans-serif;
-  }
-  
-  .inputField {
-    padding: 10px;
-    margin-bottom: 20px;
-    width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
 
-  .button {
-    padding: 10px 20px;
-    margin: 5px;
-    border: none;
-    border-radius: 5px;
-    background-color: #0070f3;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .button:hover {
-    background-color: #005bb5;
-  }
-  
-  .containerProdutos {
-    display: flex;
-    justify-content: center;
-    width: 1000px;
-  }
-  
-  .productList {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 1000px;
-  }
-  
-  .productItem {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 10px;
-    width: 220px;
-    box-sizing: border-box;
-    text-align: center;
-  }
-  
-  .productImage {
-    border-radius: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .productTitle {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .productDescription {
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  
-  .productPrice {
-    font-size: 16px;
-    color: #0070f3;
-    margin-bottom: 10px;
-  }
-  
-  .linkButton {
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #0070f3;
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .linkButton:hover {
-    background-color: #005bb5;
-  }
-  
+.inputField {
+  padding: 10px;
+  margin-bottom: 20px;
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-left: 100px;
+}
+
+.mainContent {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.filterContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  width: 250px;
+  height: 470px;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.filterContainer p {
+  margin: 10px 0;
+}
+
+.button {
+  width: 100px;
+  padding: 10px 20px;
+  margin: 5px 0;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(219, 219, 219);
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #c9c6c6;
+}
+
+.containerProdutos {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.productList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+}
+
+.productItem {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+  width: 220px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.productImage {
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.productTitle {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.productDescription {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.productPrice {
+  font-size: 16px;
+  color: #0070f3;
+  margin-bottom: 10px;
+}
+
+.linkButton {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(219, 219, 219);
+  color: rgb(0, 0, 0);
+  font-weight: 550;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.linkButton:hover {
+  background-color: #c9c6c6;
+}
+
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 550px;
+}
