--- a/src/app/product/[id]/page.module.css
+++ b/src/app/product/[id]/page.module.css
@@ -1,4 +1,3 @@
-/* product.module.css */
 .productContainer {
     display: flex;
     flex-direction: column;
@@ -14,7 +13,7 @@
 }
 
 .productImage {
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .productName {
@@ -27,34 +26,56 @@
 .productDescription {
     font-size: 20px;
     color: #666;
-    margin: 10px 0;
+    margin: 5px 0;
 }
 
 .productStatus {
     font-size: 16px;
     color: #999;
-    margin: 10px 0;
+    margin: 2px 0;
 }
 
 .productPrice {
     font-size: 22px;
     font-weight: bold;
     color: #0070f3;
-    margin: 10px 0;
+    margin: 2px 0;
 }
 
 .buyButton {
     padding: 10px 20px;
-    background-color: #0070f3;
-    color: white;
+    background-color: rgb(219, 219, 219);
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    margin-top: 20px;
+    margin-top: 10px;
     transition: background-color 0.3s;
 }
 
 .buyButton:hover {
-    background-color: #005bb5;
+    background-color: #c9c6c6;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.linkButton {
+    padding: 10px 20px;
+    background-color: rgb(219, 219, 219);
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+    margin-bottom: 10px;
+}
+
+.linkButton:hover {
+    background-color: #c9c6c6;
 }
